# ocaml_mammut

./: .gitignore  .gitmodules  .ocamlformat  .travis-ci.sh  .travis-ci2.sh  .travis.yml  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  dune-project  generate_stubs.ml  generate_types.ml  mammut.ml  mammut.opam  mammut_stubs.cpp  test.ml
c/: dune  generate_ml_functions.ml  mammut_generated.opam
dockerscripts/: install_ocaml.sh
generate_stubs/: META  Makefile  mammut.ml  ocaml_mammut.ml  test.ml
old/: META  Makefile  mammut.ml  test.ml
src/: Makefile  dune  dune-project  dune~  generate_stubs.ml  generate_types.ml  mammut.ml  mammut.mli
src/c/: dune  generate_c_functions.ml  generate_types_start.ml  mammut_stubs_description.ml
src/test/: Makefile  dune
test/: Makefile  dune  test.ml
