opam-version: "2.0"
name: "ocaml_mammut"
version: "~dev"
synopsis: "Mammut for OCaml"
maintainer: "mathias.bourgoin@nomadic-labs.com"
authors: "mathias.bourgoin@nomadic-labs.com"
license: "MIT"
homepage: ""
bug-reports: ""
depends: [
  "ctypes" {>= "0.14.0"}
  "ctypes-foreign" {>= "0.4.0"}
]
build: make
install: [make "install"]
dev-repo: "git+https://"
